@@ -4,18 +4,17 @@ import zipfile
 import re
 import stat
 
-startscript="""
-from crate.crash.command import main;
-main()
-"""
-
 excludes = re.compile(''.join(r"""(
 readline\.py|
 .*EGG-INFO.*|
 setuptools/.*|
+_markerlib/.*|
+easy_install\.py|
+pkg_resources\.py|
 .*/__pycache__/.*|
 .*\.py[co]$
 )""".strip().split('\n')))
+
 
 def zipdir(path, zip):
     if path.endswith('/'):
@@ -31,7 +30,7 @@ def zipdir(path, zip):
 
 def main(out_path, libdir):
 
-    with file(out_path, 'w') as out_file:
+    with open(out_path, 'w') as out_file:
         print >> out_file, '#!/usr/bin/env python'
 
     st = os.stat(out_path)
@@ -40,8 +39,21 @@ def main(out_path, libdir):
     zipf = zipfile.ZipFile(out_path, 'a', zipfile.ZIP_DEFLATED)
     zipdir(libdir, zipf)
 
+    startscript = """
+import sys, os, re
+try:
+    del sys.modules['crate']
+except:
+    pass
+pattern = re.compile('^.*site-packages.*$')
+for p in sys.path:
+    if pattern.match(p):
+        sys.path.remove(p)
+from crate.crash.command import main;
+main()
+"""
+    print(startscript)
     zipf.writestr('__main__.py', startscript)
-
     zipf.close()
 
 
@@ -51,7 +63,7 @@ if __name__ == '__main__':
     parser = argparse.ArgumentParser(
         description="Bundle script for crash",
         formatter_class=argparse.ArgumentDefaultsHelpFormatter,
-        )
+    )
     parser.add_argument("output_path")
     args = parser.parse_args()
     main(args.output_path, libdir)
